--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
+    "@angular/animations": "^17.0.7",
     "@angular/cdk": "^17.0.4",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@nrwl/angular": "^17.2.7",
+    "angular-animations": "^0.11.0",
     "ngx-skeleton-loader": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
